# ml-experiments

./: README.md
gen-cli/: README.md  pyproject.toml  requirements.txt
gen-cli/gen_cli/: main.py
llm-self-hosting/: g5-image.json  image.json  inf2-image.json  tgi-grafana-integration-readme.md  tgi-with-g5-docker-readme.md  tgi-with-inf2-docker-readme.md  tgi-with-inferentia-docker-readme.md
llm-self-hosting/g5-scripts/: run-g5-tgi-inference.sh  stop-g5-tgi-inference.sh  tail-logs-g5-tgi-inference.sh
