[tool.poetry]
name = "gen-cli"
version = "0.1.0"
description = ""
authors = ["akshayar <akshaya.rawat@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
boto3 = "^1.34.131"
langchain = "^0.2.5"
pyinquirer = "^1.0.3"
llama-index = "^0.10.50"
llama-index-llms-bedrock = "^0.1.9"
chromadb = "^0.5.3"
llama-index-vector-stores-chroma = "^0.1.9"
llama-index-embeddings-bedrock = "^0.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
